# wordle-py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: __main__.py  guesser.py  models.py
src/wordle/: __main__.py  guesser.py  models.py
src/wordle/core/: guesser.py
tests/unit/: models.py  test_models.py
