
[project]
name = "wordle"
version = "0.1.0"
description = ""
authors = [
    {name = "Jan Laermann", email = "laermannjan@gmail.com"},
]
dependencies = [
    "pydantic>=1.10.7",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src/wordle"]
#[tool.setuptools]
#package-dir = {"" = "src"}
#
#[tool.setuptools.packages.find]
#where = ["src"]

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "ruff>=0.0.265",
    "mypy>=1.2.0",
    "pre-commit>=3.3.1",
    "pytest>=7.3.1",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.isort]
known-first-party = ["wordle"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
